--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=gimosa-trade
 
 
 # DataSource Configuration
-spring.datasource.url: jdbc:postgresql://localhost:5432/niti
-spring.datasource.username= postgres
-spring.datasource.password= admin
+#spring.datasource.url: jdbc:postgresql://localhost:5432/niti
+#spring.datasource.username= postgres
+#spring.datasource.password= admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.datasource.url=jdbc:postgresql://dpg-csfvutogph6c73cv8stg-a.oregon-postgres.render.com:5432/bakery_be_fxvg
-#spring.datasource.username= bakery_be_fxvg_user
-#spring.datasource.password= Ve3zOiUobxwvC8BUgzYHRiiyKWE7MOWI
+spring.datasource.url=jdbc:postgresql://dpg-csfvutogph6c73cv8stg-a.oregon-postgres.render.com:5432/gimosa
+spring.datasource.username= gimosa_user
+spring.datasource.password= XR5l1ortXS7V0yGCcoX2F3XVNVl6CBMr
 
 # JPA and Hibernate Configuration
 spring.jpa.show-sql=true
