--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=gimosa-trade
 #spring.datasource.url: jdbc:postgresql://localhost:5432/niti
 #spring.datasource.username= postgres
 #spring.datasource.password= admin
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://dpg-csfvutogph6c73cv8stg-a.oregon-postgres.render.com:5432/gimosa
+spring.datasource.url=jdbc:postgresql://dpg-ctu0pv5ds78s73fjq08g-a.oregon-postgres.render.com:5432/gimosa
 spring.datasource.username= gimosa_user
 spring.datasource.password= XR5l1ortXS7V0yGCcoX2F3XVNVl6CBMr
 
