improving the appliation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=gimosa-trade
 
 
-# DataSource Configuration
 #spring.datasource.url: jdbc:postgresql://localhost:5432/niti
 #spring.datasource.username= postgres
 #spring.datasource.password= admin
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://dpg-ctu0pv5ds78s73fjq08g-a.oregon-postgres.render.com:5432/gimosa
-spring.datasource.username= gimosa_user
-spring.datasource.password= XR5l1ortXS7V0yGCcoX2F3XVNVl6CBMr
+spring.datasource.url=jdbc:postgresql://dpg-ctu0pv5ds78s73fjq08g-a.oregon-postgres.render.com:5432/gimosa_uu50
+spring.datasource.username= gimosa_uu50_user
+spring.datasource.password= 56xujpyRsnOZISogn6dUUVF1TQZBdDYn
 
 # JPA and Hibernate Configuration
 spring.jpa.show-sql=true
