--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=gimosa-trade
 
 
-#spring.datasource.url: jdbc:postgresql://localhost:5432/niti
-#spring.datasource.username= postgres
-#spring.datasource.password= admin
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url: jdbc:postgresql://localhost:5432/niti
+spring.datasource.username= postgres
+spring.datasource.password= admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://dpg-cu6dpvdsvqrc738hfu7g-a.oregon-postgres.render.com:5432/gimosa_uu50
-spring.datasource.username= gimosa_uu50_user
-spring.datasource.password= 56xujpyRsnOZISogn6dUUVF1TQZBdDYn
+#spring.datasource.url=jdbc:postgresql://dpg-cu6dpvdsvqrc738hfu7g-a.oregon-postgres.render.com:5432/gimosa_uu50
+#spring.datasource.username= gimosa_uu50_user
+#spring.datasource.password= 56xujpyRsnOZISogn6dUUVF1TQZBdDYn
 
 # JPA and Hibernate Configuration
 spring.jpa.show-sql=true
